--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="/selekda img/Frame 83.png" alt="WebtechID">
+    <img src="/selekda img/Frame 83.png" alt="WebtechID" class="logo">
     <ul class="menu">
       <li class="dropdown">About
         <ul class="drop">
@@ -23,14 +23,14 @@
       <li class="option">Dashboard</li>
       <li class="option">Services</li>
     </ul>
-    <div>
+    <div class="searchbar">
     <input type="search" placeholder="Search..." class="searching">
     <button class="cari">Search</button>
     </div>
   </header>
 
   <main>
-    
+
   </main>
 </body>
 </html>
