membuat interactive banner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <img src="/selekda img/Frame 83.png" alt="WebtechID" class="logo">
     <ul class="menu">
-      <li class="dropdown">About
+      <li class="dropdown option">About
         <ul class="drop">
           <li class="down">News</li>
           <li class="down">Portfolio</li>
@@ -30,7 +30,33 @@
   </header>
 
   <main>
-
+    <div class="slideshow-container">
+      <div class="mySlides">
+          <img src="slide1.jpg" style="width:100%">
+      </div>
+  
+      <div class="mySlides">
+          <img src="slide2.jpg" style="width:100%">
+      </div>
+  
+      <div class="mySlides">
+          <img src="slide3.jpg" style="width:100%">
+      </div>
+  
+  </div>
+  
+  <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)">
+          <img src="/IMAGES/images (10).jpg" alt="Thumbnail 1">
+      </span> 
+      <span class="dot" onclick="currentSlide(2)">
+          <img src="/IMAGES/images (11).jpg" alt="Thumbnail 2">
+      </span> 
+      <span class="dot" onclick="currentSlide(3)">
+          <img src="/IMAGES/images (12).jpg" alt="Thumbnail 3">
+      </span> 
+  </div>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
