--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   <main>
     <div class="slideshow-container">
       <div class="mySlides">
-          <img src="slide1.jpg" style="width:100%">
+          <img src="/IMAGES/images (13).jpg" style="width:100%">
       </div>
   
       <div class="mySlides">
-          <img src="slide2.jpg" style="width:100%">
+          <img src="/IMAGES/images (14).jpg" style="width:100%">
       </div>
   
       <div class="mySlides">
-          <img src="slide3.jpg" style="width:100%">
+          <img src="/IMAGES/images (15).jpg" style="width:100%">
       </div>
   
   </div>
