--- a/index.html
+++ b/index.html
@@ -32,15 +32,23 @@
   <main>
     <div class="slideshow-container">
       <div class="mySlides">
-          <img src="/IMAGES/images (13).jpg" style="width:100%">
+          <img src="/IMAGES/images (10).jpg" style="width: 1000px; height: 600px;">
       </div>
   
       <div class="mySlides">
-          <img src="/IMAGES/images (14).jpg" style="width:100%">
+          <img src="/IMAGES/images (11).jpg" style="width:1000px; height: 600px;">
       </div>
   
       <div class="mySlides">
-          <img src="/IMAGES/images (15).jpg" style="width:100%">
+          <img src="/IMAGES/images (12).jpg" style="width:1000px; height: 600px;">
+      </div>
+
+      <div class="mySlides">
+          <img src="/IMAGES/images (15).jpg" style="width:1000px; height: 600px;">
+      </div>
+
+      <div class="mySlides">
+          <img src="/IMAGES/images (14).jpg" style="width:1000px; height: 600px;">
       </div>
   
   </div>
@@ -55,7 +63,19 @@
       <span class="dot" onclick="currentSlide(3)">
           <img src="/IMAGES/images (12).jpg" alt="Thumbnail 3">
       </span> 
+      <span class="dot" onclick="currentSlide(3)">
+         <img src="/IMAGES/images (15).jpg" alt="Thumbnail 3">
+      </span> 
+      <span class="dot" onclick="currentSlide(3)">
+        <img src="/IMAGES/images (14).jpg" alt="Thumbnail 3">
+      </span> 
   </div>
+
+  <section>
+    <h1>Welcome to WebtechID</h1>
+    <p>Discover a space where creativity meets community. At WebtechID, we bring together a diverse range of voices and topics, offering something for everyone. Whether you're passionate about travel, tech, food, or personal development, you'll find fresh content that inspires, educates, and entertains. Join us as we explore new ideas and share stories that connect us all.</p>
+    <img src="" alt="">
+  </section>
   </main>
   <script src="script.js"></script>
 </body>
