membuat button bagian about

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <img src="/selekda img/Frame 83.png" alt="WebtechID" class="logo">
     <ul class="menu">
-      <li class="dropdown option">About
+      <li class="dropdown option"><a href="#section1">About</a>
         <ul class="drop">
           <li class="down">News</li>
           <li class="down">Portfolio</li>
@@ -71,10 +71,27 @@
       </span> 
   </div>
 
+  <section id="section1">
+    <div class="about-left">
+      <div class="text">
+        <h1 class="judul">Welcome to WebtechID</h1>
+        <p class="about">Discover a space where creativity meets community. At WebtechID, we bring together a diverse range of voices and topics, offering something for everyone.</p>
+        <p class="about">Whether you're passionate about travel, tech, food, or personal development, you'll find fresh content that inspires, educates, and entertains. Join us as we explore new ideas and share stories that connect us all.</p>
+      </div>
+
+      <div class="btn">
+        <button class="about-btn">Explore More</button>
+        <button class="about-btn2">About Us</button>
+      </div>
+    </div>
+    <div class="imag">
+    <img src="/selekda img/link (2).png" alt="logo" class="img">
+    </div>
+  </section>
+
+
   <section>
-    <h1>Welcome to WebtechID</h1>
-    <p>Discover a space where creativity meets community. At WebtechID, we bring together a diverse range of voices and topics, offering something for everyone. Whether you're passionate about travel, tech, food, or personal development, you'll find fresh content that inspires, educates, and entertains. Join us as we explore new ideas and share stories that connect us all.</p>
-    <img src="" alt="">
+
   </section>
   </main>
   <script src="script.js"></script>
