membuat latest news

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <li class="down">Services</li>
         </ul>
       </li>
-      <li class="option">News</li>
-      <li class="option">Portfolio</li>
-      <li class="option">Dashboard</li>
-      <li class="option">Services</li>
+      <li class="option"><a href="#section2">News</a></li>
+      <li class="option"><a href="">Portfolio</a></li>
+      <li class="option"><a href="">Dashboard</a></li>
+      <li class="option"><a href="">Services</a></li>
     </ul>
     <div class="searchbar">
     <input type="search" placeholder="Search..." class="searching">
@@ -90,8 +90,34 @@
   </section>
 
 
-  <section>
+  <section id="section2">
+    <h1 class="judul-news">Latest News</h1>
+    <div class="news-container">
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
 
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+      
+    </div>
   </section>
   </main>
   <script src="script.js"></script>
