--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
 </head>
 <body>
   <header>
-    <img src="/selekda img/Frame 83.png" alt="WebtechID" class="logo">
-    <ul class="menu">
-      <li class="dropdown option"><a href="#section1">About</a>
-        <ul class="drop">
-          <li class="down">News</li>
-          <li class="down">Portfolio</li>
-          <li class="down">Dashboard</li>
-          <li class="down">Services</li>
-        </ul>
-      </li>
-      <li class="option"><a href="#section2">News</a></li>
-      <li class="option"><a href="">Portfolio</a></li>
-      <li class="option"><a href="">Dashboard</a></li>
-      <li class="option"><a href="">Services</a></li>
-    </ul>
-    <div class="searchbar">
-    <input type="search" placeholder="Search..." class="searching">
-    <button class="cari">Search</button>
+    <div class="header-container">
+      <img src="/selekda img/Frame 83.png" alt="WebtechID" class="logo">
+      <ul class="menu">
+        <li class="dropdown option"><a href="#section1">About</a>
+          <ul class="drop">
+            <li class="down">News</li>
+            <li class="down">Portfolio</li>
+            <li class="down">Dashboard</li>
+            <li class="down">Services</li>
+          </ul>
+        </li>
+        <li class="option"><a href="#section2">News</a></li>
+        <li class="option"><a href="">Portfolio</a></li>
+        <li class="option"><a href="">Dashboard</a></li>
+        <li class="option"><a href="">Services</a></li>
+      </ul>
+      <div class="searchbar">
+      <input type="search" placeholder="Search..." class="searching">
+      <button class="cari">Search</button>
+      </div>
     </div>
   </header>
 
@@ -116,7 +118,19 @@
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
-      
+
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+
     </div>
   </section>
   </main>
