--- a/index.html
+++ b/index.html
@@ -131,6 +131,47 @@
         <p class="news-desc">desc</p>
       </div>
 
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+
+      <div class="news">
+        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <h4 class="news-text">Tips to Enchance Your Computer</h4>
+        <p class="news-desc">desc</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section id="section3">
+    <h1 class="judul-portfolio">Our Portfolio</h1>
+
+    <div class="portfolio-container">
+      <div class="portfolio-awal">
+        <img src="/IMAGES/images (2).jpg" alt="portfolio" class="portfolio-imag">
+        <h4 class="portfolio-text">Esport Web</h4>
+        <p class="portfolio-desc">desc</p>
+      </div>
+
+      <div class="portfolio-awal">
+        <img src="/IMAGES/images (2).jpg" alt="portfolio" class="portfolio-imag">
+        <h4 class="portfolio-text">Esport Web</h4>
+        <p class="portfolio-desc">desc</p>
+      </div>
+
+      <div class="portfolio-awal">
+        <img src="/IMAGES/images (2).jpg" alt="portfolio" class="portfolio-imag">
+        <h4 class="portfolio-text">Esport Web</h4>
+        <p class="portfolio-desc">desc</p>
+      </div>
+
+      <div class="portfolio-btn">
+        <button>Detail</button>
+      </div>
+
     </div>
   </section>
   </main>
