perjalanan menuju cafe

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="text">
         <h1 class="judul">Welcome to WebtechID</h1>
         <p class="about">Discover a space where creativity meets community. At WebtechID, we bring together a diverse range of voices and topics, offering something for everyone.</p>
-        <p class="about">Whether you're passionate about travel, tech, food, or personal development, you'll find fresh content that inspires, educates, and entertains. Join us as we explore new ideas and share stories that connect us all.</p>
+        <p class="about about1">Whether you're passionate about travel, tech, food, or personal development, you'll find fresh content that inspires, educates, and entertains. Join us as we explore new ideas and share stories that connect us all.</p>
       </div>
 
       <div class="btn">
@@ -168,11 +168,14 @@
         <p class="portfolio-desc">desc</p>
       </div>
 
-      <div class="portfolio-btn">
-        <button>Detail</button>
+
+      <div class="portfoliobtn">
+        <button class="portfolio-btn">Detail</button>
       </div>
 
     </div>
+
+
   </section>
   </main>
   <script src="script.js"></script>
