memperbaiki bug pada bagian portfolio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </ul>
         </li>
         <li class="option"><a href="#section2">News</a></li>
-        <li class="option"><a href="">Portfolio</a></li>
+        <li class="option"><a href="#section3">Portfolio</a></li>
         <li class="option"><a href="">Dashboard</a></li>
         <li class="option"><a href="">Services</a></li>
       </ul>
