--- a/index.html
+++ b/index.html
@@ -177,6 +177,39 @@
 
 
   </section>
+
+  <section>
+    <div class="services">
+      <h1>Services</h1>
+
+      <div class="services-container">
+        <div class="services-isi">
+          <img src="/IMAGES/images (4).jpg" alt="Services" class="services-img">
+          <h4 class="services-text">Web Design</h4>
+          <p class="services-desc">"Get a unique website with our custom web design. Stand out online!"</p>
+        </div>
+
+        <div class="services-isi">
+          <img src="/IMAGES/images (5).jpg" alt="portfolio" class="services-img">
+          <h4 class="services-text">Esport Web</h4>
+          <p class="services-desc">desc</p>
+        </div>
+
+        <div class="services-isi">
+          <img src="/IMAGES/images (3).jpg" alt="services" class="services-img">
+          <h4 class="services-text">Esport Web</h4>
+          <p class="services-desc">desc</p>
+        </div>
+
+        <div class="services-isi">
+          <img src="/IMAGES/images (1).jpg" alt="services" class="services-img">
+          <h4 class="services-text">Esport Web</h4>
+          <p class="services-desc">desc</p>
+        </div>
+    </div>
+    </div>
+
+  </section>
   </main>
   <script src="script.js"></script>
 </body>
