membuat services dan testimonials

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 
   </section>
 
-  <section>
-    <div class="services">
-      <h1>Services</h1>
+  <section id="section4">
+    <div class="servicestesti">
+      <h1 class="judul-services">Services</h1>
 
       <div class="services-container">
         <div class="services-isi">
@@ -191,22 +191,33 @@
 
         <div class="services-isi">
           <img src="/IMAGES/images (5).jpg" alt="portfolio" class="services-img">
-          <h4 class="services-text">Esport Web</h4>
-          <p class="services-desc">desc</p>
+          <h4 class="services-text">Web Develop</h4>
+          <p class="services-desc">"Get a custom website that fits your needs perfectly!"</p>
         </div>
 
         <div class="services-isi">
           <img src="/IMAGES/images (3).jpg" alt="services" class="services-img">
-          <h4 class="services-text">Esport Web</h4>
-          <p class="services-desc">desc</p>
+          <h4 class="services-text">Web Games</h4>
+          <p class="services-desc">"Unique web games created just for you."</p>
         </div>
 
         <div class="services-isi">
           <img src="/IMAGES/images (1).jpg" alt="services" class="services-img">
-          <h4 class="services-text">Esport Web</h4>
-          <p class="services-desc">desc</p>
+          <h4 class="services-text">Web Apps</h4>
+          <p class="services-desc">"Elevate your operations with our bespoke web app solutions."</p>
         </div>
-    </div>
+      </div>
+
+      <div class="testimonial">
+        <h1 class="judul-testimonial">Testimonial</h1>
+
+        <div class="testi-container">
+          <div class="testi-isi">
+            <img src="/IMAGES/images (2).jpg" alt="testimonial" class="testi-img">
+            <p class="testi-desc">desc</p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </section>
