memperbaiki bug dan masih membuat testimonials

--- a/index.html
+++ b/index.html
@@ -208,14 +208,19 @@
         </div>
       </div>
 
-      <div class="testimonial">
-        <h1 class="judul-testimonial">Testimonial</h1>
-
-        <div class="testi-container">
-          <div class="testi-isi">
-            <img src="/IMAGES/images (2).jpg" alt="testimonial" class="testi-img">
-            <p class="testi-desc">desc</p>
-          </div>
+      <div class="testimonial-card">
+        <h1 class="judul-testi">Testimonials</h1>
+        <div class="profile">
+            <img src="profile-picture.jpg" alt="Yu Hui" class="profile-img">
+        </div>
+        <div class="testimonial-content">
+            <div class="testimonial-header">
+                <h3>Yu Hui</h3>
+                <div class="rating">
+                    ★★★★★
+                </div>
+            </div>
+            <p>"I'm impressed with the website’s design and ease of use. The clean layout and intuitive navigation make it simple to find information, and the attention to detail in both visuals and user experience is evident."</p>
         </div>
       </div>
     </div>
