--- a/index.html
+++ b/index.html
@@ -208,25 +208,84 @@
         </div>
       </div>
 
-      <div class="testimonial-card">
-        <h1 class="judul-testi">Testimonials</h1>
-        <div class="profile">
-            <img src="profile-picture.jpg" alt="Yu Hui" class="profile-img">
+      <h1 class="judul-testi">Testimonials</h1>
+      <div class="testimonials">
+        <div class="testimonial-card">
+          <div class="profile">
+              <img src="/IMAGES/images (4).png" alt="Yu Hui" class="profile-img">
+          </div>
+          <div class="testimonial-content">
+              <div class="testimonial-header">
+                  <h3 class="testi-name">Yu Hui</h3>
+                  <div class="rating">
+                      ★★★★★
+                  </div>
+              </div>
+              <p class="testi-desc">"I'm impressed with the website’s design and ease of use. The clean layout and intuitive navigation make it simple to find information, and the attention to detail in both visuals and user experience is evident."</p>
+          </div>
         </div>
-        <div class="testimonial-content">
-            <div class="testimonial-header">
-                <h3>Yu Hui</h3>
-                <div class="rating">
-                    ★★★★★
-                </div>
-            </div>
-            <p>"I'm impressed with the website’s design and ease of use. The clean layout and intuitive navigation make it simple to find information, and the attention to detail in both visuals and user experience is evident."</p>
+
+        <div class="testimonial-card">
+          <div class="profile">
+              <img src="/IMAGES/images (5).png" alt="Yu Hui" class="profile-img">
+          </div>
+          <div class="testimonial-content">
+              <div class="testimonial-header">
+                  <h3 class="testi-name">Wei Hua</h3>
+                  <div class="rating">
+                      ★★★★★
+                  </div>
+              </div>
+              <p class="testi-desc">"The website provides a fantastic user experience with its modern design and easy navigation. The content is well-presented and accessible, reflecting thoughtful planning and effective design."</p>
+          </div>
+        </div>
+
+        <div class="testimonial-card">
+          <div class="profile">
+              <img src="/IMAGES/images (18).jpg" alt="Yu Hui" class="profile-img">
+          </div>
+          <div class="testimonial-content">
+              <div class="testimonial-header">
+                  <h3 class="testi-name">Ai Ah</h3>
+                  <div class="rating">
+                      ★★★★★
+                  </div>
+              </div>
+              <p class="testi-desc">"The website provides a fantastic user experience with its modern design and easy navigation. The content is well-presented and accessible, reflecting thoughtful planning and effective design."</p>
+          </div>
         </div>
       </div>
     </div>
-
   </section>
   </main>
+
+  <footer id="section5">
+    <div class="isi">
+      <div class="social">
+        <a href="#instagram">
+          <img src="/SOCIAL_MEDIA/Colorful/fb.png">
+        </a>
+        <a href="#facebook">
+          <img src="/SOCIAL_MEDIA/Colorful/twitter.png">
+        </a>
+        <a href="#twitter">
+          <img src="/SOCIAL_MEDIA/Colorful/instagram.png">
+        </a>
+      </div>
+
+      <div class="content">
+        <div class="left">
+          <h2 class="judul-footer">WebtechID</h2>
+          <p class="footer-desc">
+            WebtechID excels in crafting bespoke web solutions that enhance functionality and user experience, making your online presence stand out.
+          </p>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>Created by Aurellia Valezca Salim 2024</p>
+      </div>
+    </div>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
