maaf tadi perjalanan pulang lupa commit dan sekarang kembali bekerja membuat responsive

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
     <h1 class="judul-news">Latest News</h1>
     <div class="news-container">
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (1).png" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (5).png" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
