--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <ul class="menu">
         <li class="dropdown option"><a href="#section1">About</a>
           <ul class="drop">
-            <li class="down">News</li>
-            <li class="down">Portfolio</li>
-            <li class="down">Dashboard</li>
-            <li class="down">Services</li>
+            <li class="down"><a href="#section2">News</a></li>
+            <li class="down"><a href="#section3">Portfolio</a></li>
+            <li class="down"><a href="">Dashboard</a></li>
+            <li class="down"><a href="">Services</a></li>
           </ul>
         </li>
         <li class="option"><a href="#section2">News</a></li>
@@ -108,37 +108,37 @@
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (9).jpg" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (8).jpg" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (7).jpg" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (6).jpg" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (5).jpg" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
 
       <div class="news">
-        <img src="/IMAGES/images (2).jpg" alt="news" class="news-img">
+        <img src="/IMAGES/images (4).jpg" alt="news" class="news-img">
         <h4 class="news-text">Tips to Enchance Your Computer</h4>
         <p class="news-desc">desc</p>
       </div>
@@ -151,20 +151,26 @@
 
     <div class="portfolio-container">
       <div class="portfolio-awal">
-        <img src="/IMAGES/images (2).jpg" alt="portfolio" class="portfolio-imag">
+        <img src="/IMAGES/images (3).jpg" alt="portfolio" class="portfolio-imag">
         <h4 class="portfolio-text">Esport Web</h4>
         <p class="portfolio-desc">desc</p>
       </div>
 
       <div class="portfolio-awal">
         <img src="/IMAGES/images (2).jpg" alt="portfolio" class="portfolio-imag">
-        <h4 class="portfolio-text">Esport Web</h4>
+        <h4 class="portfolio-text">E-Commerce Web</h4>
         <p class="portfolio-desc">desc</p>
       </div>
 
       <div class="portfolio-awal">
-        <img src="/IMAGES/images (2).jpg" alt="portfolio" class="portfolio-imag">
-        <h4 class="portfolio-text">Esport Web</h4>
+        <img src="/IMAGES/images (1).jpg" alt="portfolio" class="portfolio-imag">
+        <h4 class="portfolio-text">Dino Game</h4>
+        <p class="portfolio-desc">desc</p>
+      </div>
+
+      <div class="portfolio-awal">
+        <img src="/IMAGES/images (1).jpg" alt="portfolio" class="portfolio-imag">
+        <h4 class="portfolio-text">Tic Tac Toe Web</h4>
         <p class="portfolio-desc">desc</p>
       </div>
 
@@ -196,7 +202,7 @@
         </div>
 
         <div class="services-isi">
-          <img src="/IMAGES/images (3).jpg" alt="services" class="services-img">
+          <img src="/IMAGES/images (1).png" alt="services" class="services-img">
           <h4 class="services-text">Web Games</h4>
           <p class="services-desc">"Unique web games created just for you."</p>
         </div>
