--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       </span> 
   </div>
 
+  <!-- section about -->
   <section id="section1">
     <div class="about-left">
       <div class="text">
@@ -91,7 +92,7 @@
     </div>
   </section>
 
-
+  <!-- section news -->
   <section id="section2">
     <h1 class="judul-news">Latest News</h1>
     <div class="news-container">
@@ -146,6 +147,7 @@
     </div>
   </section>
 
+  <!-- Section Portfolio -->
   <section id="section3">
     <h1 class="judul-portfolio">Our Portfolio</h1>
 
